--- a/style.css
+++ b/style.css
@@ -1,65 +1,69 @@
+
+@font-face {
+  font-family: 'Press Start 2P';
+  src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+}
+
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #333;
-    color: white;
-    font-family: Arial, sans-serif;
+    background-color: black;
+    color: yellow;
+    font-family: 'Press Start 2P', cursive;
 }
 
 #game-container {
     position: relative;
     width: 800px;
-    height: 400px;
-    background-color: #555;
-    border: 2px solid #000;
+    height: 600px;
+    background-color: black;
     overflow: hidden;
+    border: 2px solid yellow;
 }
 
-#sun {
+#score {
     position: absolute;
-    top: 20px;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+}
+
+#get-ready {
+    position: absolute;
+    top: 50%;
     left: 50%;
-    width: 60px;
-    height: 60px;
-    background-color: yellow;
-    border-radius: 50%;
-}
-
-.tree {
-    position: absolute;
-    width: 40px;
-    height: 80px;
-    background-color: #8B4513;
-}
-
-#tree1 {
-    left: 100px;
-    bottom: 20px;
-}
-
-#tree2 {
-    right: 100px;
-    bottom: 20px;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    display: none;
 }
 
 .player {
     position: absolute;
-    left: 20px;
-    width: 50px;
-    height: 50px;
-    background-color: red;
+    width: 40px;
+    height: 40px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.player img {
+    width: 100%;
+    height: auto;
 }
 
 #player1 {
-    top: 20px;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #player2 {
-    top: 330px;
-    left: 730px;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .bullet {
@@ -70,12 +74,37 @@ body {
     display: none;
 }
 
-#bullet1 {
-    top: 35px;
-    left: 70px;
+.tree, .obstacle {
+    position: absolute;
+    width: 20px;
+    height: 60px;
+    background-color: yellow;
 }
 
-#bullet2 {
-    top: 345px;
-    left: 720px;
+#tree1 {
+    top: 100px;
+    left: 200px;
+}
+
+#tree2 {
+    top: 400px;
+    left: 200px;
+}
+
+#tree3 {
+    top: 100px;
+    right: 200px;
+}
+
+#tree4 {
+    top: 400px;
+    right: 200px;
+}
+
+#wagon {
+    width: 60px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
