--- a/style.css
+++ b/style.css
@@ -1,122 +1,129 @@
 
 @font-face {
-    font-family: 'Press Start 2P';
-    src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-  }
-  
-  body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: black;
-      color: yellow;
-      font-family: 'Press Start 2P', cursive;
-  }
-  
-  #game-container {
-      position: relative;
-      width: 800px;
-      height: 600px;
-      background-color: black;
-      overflow: hidden;
-      border: 2px solid yellow;
-  }
-  
-  #sun {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      width: 800px;
-      height: 800px;
-      background-color: yellow;
-      border-radius: 50%;
-      transform: translateX(-50%);
-      z-index: -1;
-  }
-  
-  #score {
-      position: absolute;
-      top: 10px;
-      width: 100%;
-      text-align: center;
-      font-size: 20px;
-  }
-  
-  #get-ready {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 30px;
-      display: none;
-  }
-  
-  .player {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background-size: contain;
-      background-repeat: no-repeat;
-  }
-  
-  .player img {
-      width: 100%;
-      height: auto;
-  }
-  
-  #player1 {
-      left: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-  }
-  
-  #player2 {
-      right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-  }
-  
-  .bullet {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: yellow;
-  }
-  
-  .tree, .obstacle {
-      position: absolute;
-      width: 20px;
-      height: 60px;
-      background-color: yellow;
-  }
-  
-  #tree1 {
-      top: 100px;
-      left: 200px;
-  }
-  
-  #tree2 {
-      top: 400px;
-      left: 200px;
-  }
-  
-  #tree3 {
-      top: 100px;
-      right: 200px;
-  }
-  
-  #tree4 {
-      top: 400px;
-      right: 200px;
-  }
-  
-  #wagon {
-      width: 60px;
-      height: 40px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  }
-  
+  font-family: 'Press Start 2P';
+  src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+}
+
+body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: black;
+    color: yellow;
+    font-family: 'Press Start 2P', cursive;
+}
+
+#game-container {
+    position: relative;
+    width: 800px;
+    height: 600px;
+    background-color: black;
+    overflow: hidden;
+    border: 2px solid yellow;
+}
+
+#sun {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 100px;
+    height: 100px;
+}
+
+#score {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+}
+
+#get-ready {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    display: none;
+}
+
+.player {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.player img {
+    width: 100%;
+    height: auto;
+}
+
+#player1 {
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#player2 {
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.bullet {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: yellow;
+}
+
+.tree, .obstacle {
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.tree img, .obstacle img {
+    width: 100%;
+    height: auto;
+}
+
+#tree1 {
+    top: 100px;
+    left: 200px;
+    width: 40px;
+    height: 80px;
+}
+
+#tree2 {
+    top: 400px;
+    left: 200px;
+    width: 40px;
+    height: 80px;
+}
+
+#tree3 {
+    top: 100px;
+    right: 200px;
+    width: 40px;
+    height: 80px;
+}
+
+#tree4 {
+    top: 400px;
+    right: 200px;
+    width: 40px;
+    height: 80px;
+}
+
+#wagon {
+    width: 80px;
+    height: 60px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
