--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: black;
+    background-color: white;
     color: yellow;
     font-family: 'Press Start 2P', cursive;
 }
@@ -19,7 +19,7 @@ body {
     position: relative;
     width: 800px;
     height: 600px;
-    background-color: black;
+    background-color: white;
     overflow: hidden;
     border: 2px solid yellow;
 }
