--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Press Start 2P';
   src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -10,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: white;
+    background-color: white; /* Set the background color to white */
     color: yellow;
     font-family: 'Press Start 2P', cursive;
 }
@@ -19,7 +18,7 @@ body {
     position: relative;
     width: 800px;
     height: 600px;
-    background-color: white;
+    background-color: white; /* Set the background color to white */
     overflow: hidden;
     border: 2px solid yellow;
 }
