--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Press Start 2P';
   src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -74,7 +73,7 @@ body {
     transform: translateY(-50%);
 }
 
-.bullet1, .bullet2 {
+.bullet {
     position: absolute;
     width: 10px;
     height: 10px;
