--- a/style.css
+++ b/style.css
@@ -1,128 +1,49 @@
-@font-face {
-  font-family: 'Press Start 2P';
-  src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-}
 
 body {
-    margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 100vh;
-    background-color: white; /* Set the background color to white */
-    color: yellow;
-    font-family: 'Press Start 2P', cursive;
+    margin: 0;
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
 }
 
 #game-container {
     position: relative;
     width: 800px;
-    height: 600px;
-    background-color: white; /* Set the background color to white */
+    height: 400px;
+    background-color: #444;
+    border: 2px solid #222;
     overflow: hidden;
-    border: 2px solid yellow;
-}
-
-#sun {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 100px;
-    height: 100px;
-}
-
-#score {
-    position: absolute;
-    top: 10px;
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-}
-
-#get-ready {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    display: none;
 }
 
 .player {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.player img {
-    width: 100%;
-    height: auto;
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    bottom: 0;
 }
 
 #player1 {
-    left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+    left: 0;
 }
 
 #player2 {
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 0;
 }
 
 .bullet {
     position: absolute;
     width: 10px;
     height: 10px;
-    background-color: black; /* Set the bullets' color to black */
+    background-color: red;
+    display: none;
 }
 
-.tree, .obstacle {
-    position: absolute;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.tree img, .obstacle img {
-    width: 100%;
-    height: auto;
-}
-
-#tree1 {
-    top: 100px;
-    left: 200px;
-    width: 40px;
-    height: 80px;
-}
-
-#tree2 {
-    top: 400px;
-    left: 200px;
-    width: 40px;
-    height: 80px;
-}
-
-#tree3 {
-    top: 100px;
-    right: 200px;
-    width: 40px;
-    height: 80px;
-}
-
-#tree4 {
-    top: 400px;
-    right: 200px;
-    width: 40px;
-    height: 80px;
-}
-
-#wagon {
-    width: 80px;
-    height: 60px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#scoreboard {
+    margin-top: 20px;
+    font-size: 20px;
 }
