--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     display: flex;
     flex-direction: column;
@@ -24,15 +23,16 @@ body {
     width: 50px;
     height: 50px;
     background-color: blue;
-    bottom: 0;
 }
 
 #player1 {
     left: 0;
+    top: 175px;
 }
 
 #player2 {
     right: 0;
+    top: 175px;
 }
 
 .bullet {
