--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: white; /* Set the background color to white */
+    background-color: black; 
     color: yellow;
     font-family: 'Press Start 2P', cursive;
 }
