--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
     right: 20px;
     width: 100px;
     height: 100px;
-    font-size: 50px; /* Adjust size as needed */
-
+    font-size: 70px; /* Adjust size as needed */
+    transform: scale(1.2); /* Scale the sun symbol by 1.2 times */
 }
 
 #score {
