--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
     right: 20px;
     width: 100px;
     height: 100px;
+    font-size: 100px; /* Increased size */
+    color: yellow; /* Set color to yellow */
 }
 
 #score {
