--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     width: 100px;
     height: 100px;
     font-size: 100px; /* Increased size */
-    color: yellow; /* Set color to yellow */
+    color: orange; /* Set color to ... */
 }
 
 #score {
@@ -86,6 +86,7 @@ body {
     position: absolute;
     background-size: contain;
     background-repeat: no-repeat;
+  
 }
 
 .tree img, .obstacle img {
@@ -98,6 +99,7 @@ body {
     left: 200px;
     width: 40px;
     height: 80px;
+    font-size: 50px; /* Increased size */
 }
 
 #tree2 {
@@ -105,6 +107,7 @@ body {
     left: 200px;
     width: 40px;
     height: 80px;
+    font-size: 50px; /* Increased size */
 }
 
 #tree3 {
@@ -112,6 +115,7 @@ body {
     right: 200px;
     width: 40px;
     height: 80px;
+    font-size: 50px; /* Increased size */
 }
 
 #tree4 {
@@ -119,6 +123,7 @@ body {
     right: 200px;
     width: 40px;
     height: 80px;
+    font-size: 50px; /* Increased size */
 }
 
 #wagon {
@@ -126,5 +131,6 @@ body {
     height: 60px;
     top: 50%;
     left: 50%;
+    font-size: 50px; /* Increased size */
     transform: translate(-50%, -50%);
 }
