--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
     font-size: 50px; /* Increased size */
 }
 
-#wagon {
+#squirrel {
     width: 80px;
     height: 60px;
     top: 50%;
