--- a/style.css
+++ b/style.css
@@ -129,8 +129,7 @@ body {
 #squirrel {
     width: 80px;
     height: 60px;
-    top: 50%;
-    left: 50%;
-    font-size: 50px; /* Increased size */
-    transform: translate(-50%, -50%);
+    top: 150px;
+    left: 50px;
+
 }
