--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ body {
 #player1 {
     left: 20px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(+50%);
 }
 
 #player2 {
     right: 20px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(+50%);
 }
 
 .symbol {
