--- a/style.css
+++ b/style.css
@@ -17,20 +17,23 @@ body {
 
 #game-container {
     position: relative;
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    max-width: 800px;
+    height: 100%;
+    max-height: 600px;
     background-color: green;
     overflow: hidden;
     border: 2px solid yellow;
+    touch-action: none; /* Prevent default scrolling/panning on touch devices */
 }
 
 #sun {
     position: absolute;
     top: 20px;
     right: 20px;
-    width: 150px;
-    height: 150px;
-    font-size: 150px;
+    width: 20vw;
+    height: 20vw;
+    font-size: 20vw;
     color: orange;
 }
 
@@ -39,7 +42,7 @@ body {
     top: 10px;
     width: 100%;
     text-align: center;
-    font-size: 20px;
+    font-size: 4vw;
 }
 
 #get-ready {
@@ -47,14 +50,14 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -140%);
-    font-size: 30px;
+    font-size: 6vw;
     display: none;
 }
 
 .player {
     position: absolute;
-    width: 200px;  /* Increase size  */
-    height: 200px; /* Increase size */
+    width: 10vw;
+    height: 10vw;
 }
 
 .player img {
@@ -63,48 +66,48 @@ body {
 }
 
 #player1 {
-    left: 20px;
+    left: 5%;
     top: 50%;
     transform: translateY(-50%);
 }
 
 #player2 {
-    right: 20px;
+    right: 5%;
     top: 50%;
     transform: translateY(-50%);
 }
 
 .symbol {
     position: absolute;
-    font-size: 50px;
+    font-size: 10vw;
 }
 
 #frisbee {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
+    width: 5vw;
+    height: 5vw;
+    font-size: 5vw;
     color: yellow;
 }
 
 #tree1 {
-    top: 100px;
-    left: 200px;
+    top: 20%;
+    left: 25%;
 }
 
 #tree2 {
-    top: 400px;
-    left: 450px;
+    top: 70%;
+    left: 25%;
 }
 
 #dog1 {
-    top: 300px;
-    left: 350px;
-    font-size: 60px;
+    top: 25%;
+    left: 50%;
+    font-size: 12vw;
 }
 
 #squirrel1 {
-    top: 50px;
-    left: 100px;
-    font-size: 50px;
+    top: 10%;
+    left: 12%;
+    font-size: 8vw;
 }
