--- a/style.css
+++ b/style.css
@@ -68,12 +68,14 @@ body {
 #player1 {
     left: 5%;
     top: 50%;
+    font-size: 12vw;
     transform: translateY(-50%);
 }
 
 #player2 {
     right: 5%;
     top: 50%;
+    font-size: 12vw;
     transform: translateY(-50%);
 }
 
