--- a/style.css
+++ b/style.css
@@ -1,152 +1,187 @@
 
 @font-face {
-  font-family: 'Press Start 2P';
-  src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-}
-
-body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: black; 
-    color: yellow;
-    font-family: 'Press Start 2P', cursive;
-}
-
-#game-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    max-width: 800px;
-    max-height: 600px;
-    background-color: green;
-    overflow: hidden;
-    border: 2px solid yellow;
-    touch-action: none; /* Prevent default scrolling/panning on touch devices */
-}
-
-#sun {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 20vw;
-    height: 20vw;
-    font-size: 20vw;
-    color: orange;
-}
-
-#score {
-    position: absolute;
-    top: 10px;
-    width: 100%;
-    text-align: center;
-    font-size: 4vw;
-}
-
-#get-ready {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -140%);
-    font-size: 6vw;
-    display: none;
-}
-
-/* Increased player size */
-.player {
-    position: absolute;
-    width: 20vw;  /* Increased size for mobile */
-    height: 20vw;
-}
-
-.player img {
-    width: 100%;
-    height: auto;
-}
-
-#player1 {
-    left: 5%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-#player2 {
-    right: 5%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.symbol {
-    position: absolute;
-    font-size: 10vw;
-}
-
-#frisbee {
-    position: absolute;
-    width: 5vw;
-    height: 5vw;
-    font-size: 5vw;
-    color: yellow;
-}
-
-#tree1 {
-    top: 20%;
-    left: 25%;
-}
-
-#tree2 {
-    top: 70%;
-    left: 25%;
-}
-
-#dog1 {
-    top: 25%;
-    left: 50%;
-    font-size: 12vw;
-}
-
-#squirrel1 {
-    top: 10%;
-    left: 12%;
-    font-size: 8vw;
-}
-
-/* Specific styles for laptops and larger screens */
-@media only screen and (min-width: 800px) {
-    #game-container {
-        width: 800px;
-        height: 600px;
-    }
-    
-    /* Increased size for desktop/laptop */
-    .player {
-        width: 150px;  /* Bigger size */
-        height: 150px;
-    }
-
-    #sun {
-        width: 150px;
-        height: 150px;
-        font-size: 150px;
-    }
-
-    #frisbee {
-        width: 40px;
-        height: 40px;
-        font-size: 40px;
-    }
-
-    .symbol {
-        font-size: 50px;
-    }
-
-    #score {
-        font-size: 20px;
-    }
-
-    #get-ready {
-        font-size: 30px;
-    }
-}
+    font-family: 'Press Start 2P';
+    src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+  }
+  
+  body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: black; 
+      color: yellow;
+      font-family: 'Press Start 2P', cursive;
+  }
+  
+  #game-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-width: 800px;
+      max-height: 600px;
+      background-color: green;
+      overflow: hidden;
+      border: 2px solid yellow;
+      touch-action: none; /* Prevent default scrolling/panning on touch devices */
+  }
+  
+  #sun {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 20vw;
+      height: 20vw;
+      font-size: 20vw;
+      color: orange;
+  }
+  
+  #score {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 4vw;
+  }
+  
+  #get-ready {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -140%);
+      font-size: 6vw;
+      display: none;
+  }
+  
+  .player {
+      position: absolute;
+      width: 12vw; /* Increased player size */
+      height: 12vw;
+  }
+  
+  .player img {
+      width: 100%;
+      height: auto;
+  }
+  
+  #player1 {
+      left: 5%;
+      top: 50%;
+      transform: translateY(-50%);
+  }
+  
+  #player2 {
+      right: 5%;
+      top: 50%;
+      transform: translateY(-50%);
+  }
+  
+  .symbol {
+      position: absolute;
+      font-size: 10vw;
+  }
+  
+  #frisbee {
+      position: absolute;
+      width: 5vw;
+      height: 5vw;
+      font-size: 5vw;
+      color: yellow;
+  }
+  
+  #tree1 {
+      top: 20%;
+      left: 25%;
+  }
+  
+  #tree2 {
+      top: 70%;
+      left: 25%;
+  }
+  
+  #dog1 {
+      top: 25%;
+      left: 50%;
+      font-size: 12vw;
+  }
+  
+  #squirrel1 {
+      top: 10%;
+      left: 12%;
+      font-size: 8vw;
+  }
+  
+  /* Specific styles for laptops and larger screens */
+  @media only screen and (min-width: 800px) {
+      #game-container {
+          width: 800px;
+          height: 600px;
+      }
+      
+      .player {
+          width: 80px;
+          height: 80px;
+      }
+  
+      #sun {
+          width: 150px;
+          height: 150px;
+          font-size: 150px;
+      }
+  
+      #frisbee {
+          width: 40px;
+          height: 40px;
+          font-size: 40px;
+      }
+  
+      .symbol {
+          font-size: 50px;
+      }
+  
+      #score {
+          font-size: 20px;
+      }
+  
+      #get-ready {
+          font-size: 30px;
+      }
+  }
+  
+  /* Styling for the Game Over screen */
+  .game-over {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      color: white;
+      font-family: 'Press Start 2P', cursive;
+  }
+  
+  .game-over h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+  }
+  
+  .game-over p {
+      font-size: 24px;
+      margin-bottom: 20px;
+  }
+  
+  .game-over button {
+      padding: 10px 20px;
+      font-size: 18px;
+      font-family: 'Press Start 2P', cursive;
+      background-color: yellow;
+      color: black;
+      border: none;
+      cursor: pointer;
+  }
+  
